--- a/api/style.css
+++ b/api/style.css
@@ -1,6 +1,8 @@
 body {
     color: rgb(0, 0, 0);
-    background-color: rgb(147, 15, 255);
+    background: #20002c;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #cbb4d4, #20002c);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #cbb4d4, #20002c); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
 #pokemon-img {
@@ -14,7 +16,11 @@ body {
     text-align: center;
     border: solid rgb(0, 0, 0) 5px;
     border-radius: 30px;
-    background-color: rgb(43, 165, 6);
+    background: #0B486B;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to left, #F56217, #0B486B);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to left, #F56217, #0B486B); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+
     padding: 20px;
 }
 
